<resources>
    <string name="app_name">Chat Paper</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_account">Create New Account</string>
    <string name="password">Password</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="welcome">Welcome !</string>
    <string name="email">Email</string>
    <string name="sign_up">sign up</string>
    <string name="name">name</string>
    <string name="add_image">Add image</string>
    <string name="confirm_password">Confirm password</string>
</resources>